improvement: fix placeholder text overflow

--- a/src/components/gux-dropdown/gux-dropdown.less
+++ b/src/components/gux-dropdown/gux-dropdown.less
@@ -47,6 +47,7 @@ gux-dropdown {
         line-height: 1.66666667;
         white-space: nowrap;
         overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       gux-text-field {
